<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.telerik</groupId>
    <artifactId>calc</artifactId>
    <version>1.0-SNAPSHOT</version>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20.1</version>
                <configuration>
                    <argLine>-Xmx1024m -XX:MaxPermSize=512m -Dsun.zip.disableMemoryMapping=true</argLine>
                    <suiteXmlFiles>
                        <suiteXmlFile>resources/suites/${testsuite}.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <systemPropertyVariables>
                        <appConfig>resources/config/${app.config}</appConfig>
                    </systemPropertyVariables>
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <testFailureIgnore>true</testFailureIgnore>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgument>-Xlint:all</compilerArgument>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <phase>test</phase>
                        <configuration>
                            <tasks>
                                <property name="basedir" value="."/>
                                <property name="LIB" value="${basedir}/libs"/>
                                <delete dir="${basedir}/target/surefire-reports/html">
                                </delete>
                                <mkdir dir="${basedir}/target/surefire-reports/html">
                                </mkdir>
                                <xslt in="${basedir}/target/surefire-reports/testng-results.xml"
                                      style="${basedir}/resources/report/testng-results.xsl"
                                      out="${basedir}/target/surefire-reports/html/index.html">
                                    <param expression="${basedir}/target/surefire-reports/html/"
                                           name="testNgXslt.outputDir"/>
                                    <param expression="true" name="testNgXslt.sortTestCaseLinks"/>
                                    <param expression="FAIL,SKIP,PASS,BY_CLASS" name="testNgXslt.testDetailsFilter"/>
                                    <param expression="true" name="testNgXslt.showRuntimeTotals"/>
                                    <classpath location="${net.sf.saxon:saxon:jar}"/>
                                </xslt>
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.testng/testng -->
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.14.3</version>
        </dependency>
        <dependency>
            <groupId>functional.tests.core</groupId>
            <artifactId>functional.tests.core</artifactId>
            <version>0.0.5</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/libs/functional.tests.core-0.0.5.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sf.saxon</groupId>
            <artifactId>saxon</artifactId>
            <version>8.7</version>
        </dependency>
    </dependencies>

    <!--configs-->
    <profiles>
        <profile>
            <id>calc.emu.default.api23</id>
            <properties>
                <app.config>calc/calc.emu.default.api23.properties</app.config>
                <testsuite>calc</testsuite>
            </properties>
        </profile>
        <profile>
            <id>calc.emu.default.api27</id>
            <properties>
                <app.config>calc/calc.emu.default.api27.properties</app.config>
                <testsuite>calc</testsuite>
            </properties>
        </profile>
        <profile>
            <id>masterdetail.emu.default.api24</id>
            <properties>
                <app.config>masterdetail/masterdetail.emu.default.api24.properties</app.config>
                <testsuite>masterdetails</testsuite>
            </properties>
        </profile>
    </profiles>

</project>